--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
   - postgresql
 
 before_install:
-  - psql -c 'create database accident;' -U postgres
+  - psql -c 'create database forum;' -U postgres
 # используем режим обычного пользователя для сборки проекта.
 sudo: false
 
